[package]
name = "rebuild-token-swap"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.4"
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-sdk = "1.7.4"
proptest = "1.0"
#sim =  { path = "./sim" }
roots = "0.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
